<resources>
    <string name="app_name">Kurz Watcher</string>
    <string name="title_home">Conversion</string>
    <string name="title_dashboard">Rates</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_refresh">Refresh</string>
    <string name="currency_icon_desc">Currency icon</string>
    <string name="currency_code_gbp">GBP</string>
    <string name="currency_code_usd">USD</string>
    <string name="currency_code_eur">EUR</string>
    <string name="currency_code_btc">BTC</string>
    <string name="currency_code_CZK">CZK</string>
    <string name="button_calculate_description">Calculate</string>
    <string name="hint_value">10</string>
    <string name="change_by_icon">Change by icon</string>
    <string name="lowest_sort">Lowest</string>
    <string name="latest_sort">Latest</string>
    <string name="highest_sort">Highest</string>
    <string name="rates_in_czk">Rates in CZK</string>
</resources>