<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="80dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
            android:id="@+id/choices_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:tbgCheckedButton="@+id/choice_input_EUR">

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_input_BTC"
                android:padding="8dp"
                android:background="@color/cardview_light_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_btc"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_input_EUR"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_eur"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_input_USD"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_usd"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_input_GBP"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_gbp"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_input_CZK"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_CZK"/>

        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:gravity="center">

            <EditText
                android:id="@+id/inputConversionValue"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="center"
                android:hint="@string/hint_value"
                android:text="1"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="202dp"
                android:importantForAutofill="no" />

        </LinearLayout>


        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
            android:id="@+id/choices_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:tbgCheckedButton="@+id/choice_output_eur">

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_output_btc"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_btc"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_output_eur"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_eur"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_output_usd"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_usd"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_output_gbp"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_gbp"/>

            <com.nex3z.togglebuttongroup.button.CircularToggle
                android:id="@+id/choice_output_czk"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency_code_CZK"/>

        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>


        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/conversion_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_calculate_description"
                tools:layout_editor_absoluteX="155dp"
                tools:layout_editor_absoluteY="392dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/outputCurrencyText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="30sp"
                android:gravity="center"
                android:text="0" />

        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>